# coordination

./: README.md  drawing.py  lookin.py  main.py  model.py  ops.py  randagent.py  rollouts.py  test.py  test_robot.urdf~  utils.py
pip/gym_physics/envs/installation/catkin_ws/src/osrf-common/: .hgignore  .hgtags  CMakeLists.txt
pip/gym_physics/envs/installation/catkin_ws/src/osrf-common/.hg/: dirstate  hgrc  undo.desc
pip/gym_physics/envs/installation/catkin_ws/src/osrf-common/.hg/cache/: branchheads-served  tags
pip/gym_physics/envs/installation/catkin_ws/src/osrf-common/.hg/store/: 00changelog.i  00manifest.i  fncache  undo
pip/gym_physics/envs/installation/catkin_ws/src/osrf-common/.hg/store/data/: _c_make_lists.txt.i  ~2ehgignore.i  ~2ehgtags.i
pip/gym_physics/envs/installation/catkin_ws/src/osrf-common/.hg/store/data/cmake/: osrf-common-config.cmake.in.i
pip/gym_physics/envs/installation/catkin_ws/src/osrf-common/.hg/store/data/osrf__msgs/: _c_make_lists.txt.i  package.xml.i
pip/gym_physics/envs/installation/catkin_ws/src/osrf-common/.hg/store/data/osrf__msgs/msg/: _joint_commands.msg.i
pip/gym_physics/envs/installation/catkin_ws/src/osrf-common/.hg/store/data/ros/: _c_make_lists.txt.i
pip/gym_physics/envs/installation/catkin_ws/src/osrf-common/.hg/store/data/ros/osrf__msgs/: _c_make_lists.txt.i  _makefile.i  manifest.xml.i  package.xml.i
pip/gym_physics/envs/installation/catkin_ws/src/sandia-hand/: .hgignore  .hgtags  CMakeLists.txt  README.md
pip/gym_physics/envs/installation/catkin_ws/src/sandia-hand/.hg/: dirstate  hgrc  undo.desc
pip/gym_physics/envs/installation/catkin_ws/src/sandia-hand/.hg/cache/: branchheads-served  tags
pip/gym_physics/envs/installation/catkin_ws/src/sandia-hand/.hg/store/: 00changelog.i  00manifest.d  00manifest.i  fncache  undo
pip/gym_physics/envs/installation/catkin_ws/src/sandia-hand/.hg/store/data/: _a_u_t_h_o_r_s.i  _c_make_lists.txt.i  _l_i_c_e_n_s_e.i  _r_e_a_d_m_e.md.i  ~2ehgignore.i  ~2ehgtags.i
pip/gym_physics/envs/installation/catkin_ws/src/sandia-hand/.hg/store/data/cmake/: sandia-hand-config.cmake.in.i
pip/gym_physics/envs/installation/catkin_ws/src/sandia-hand/.hg/store/data/experimental/sandia__hand__calibration/: _c_a_t_k_i_n___i_g_n_o_r_e.i  _c_make_lists.txt.i  _makefile.i  gather__calibration__data.py.i  manifest.xml.i  tilt__roll.launch.i
pip/gym_physics/envs/installation/catkin_ws/src/sandia-hand/.hg/store/data/firmware/: _c_make_lists.txt.i  _i_n_s_t_r_u_c_t_i_o_n_s.i  _makefile.i
pip/gym_physics/envs/installation/catkin_ws/src/sandia-hand/.hg/store/data/firmware/asf-3.5.1__partial/: _r_e_a_d_m_e.md.i  asf-releasenotes-3.5.1.pdf.i  readme.txt.i
pip/gym_physics/envs/installation/catkin_ws/src/sandia-hand/.hg/store/data/firmware/bl__mobo/: main.c.i  startup._s.i
pip/gym_physics/envs/installation/catkin_ws/src/sandia-hand/.hg/store/data/firmware/bl__sam3s/: _c_make_lists.txt.i  bl__f2.c.i  bl__f3.c.i  bl__fmcb.c.i  bl__init.c.i  bl__led.c.i  bl__lpalm.c.i  bl__rpalm.c.i  bl__sam3s.c.i  bl__sam3s.ld.i  bl__sam3s__startup._s.i  bl__stubs.h.i  bl__uart.c.i
pip/gym_physics/envs/installation/catkin_ws/src/sandia-hand/.hg/store/data/firmware/common__sam3s/: _c_make_lists.txt.i  console.c.i  console.h.i  core__cm3.c.i  lowlevel.c.i  lowlevel.h.i  pio.c.i  pmc.c.i  sam3s__app.ld.i  twi.c.i  twid.c.i  usart.c.i  wdt.c.i
pip/gym_physics/envs/installation/catkin_ws/src/sandia-hand/.hg/store/data/ros/: _c_make_lists.txt.i
pip/gym_physics/envs/installation/catkin_ws/src/sandia-hand/firmware/: CMakeLists.txt  INSTRUCTIONS
pip/gym_physics/envs/installation/catkin_ws/src/sandia-hand/firmware/mobo/bl_mcu/: udp_rx.c
pip/gym_physics/envs/installation/catkin_ws/src/sandia-hand/firmware/mobo/mcu/: finger.c  power.c  udp_rx.c
pip/gym_physics/envs/installation/catkin_ws/src/sandia-hand/firmware/palm/std/: CMakeLists.txt
pip/gym_physics/envs/installation/catkin_ws/src/sandia-hand/ros/sandia_hand_description/: CMakeLists.txt  model.config  package.xml
pip/gym_physics/envs/installation/catkin_ws/src/sandia-hand/ros/sandia_hand_description/robots/: sandia_hand_both_on_box.urdf.xacro  sandia_hand_left_on_box.urdf.xacro  sandia_hand_right_on_box.urdf.xacro  sandia_hand_stumps_on_box.urdf.xacro
pip/gym_physics/envs/installation/catkin_ws/src/sandia-hand/ros/sandia_hand_description/urdf/: sandia_hand.gazebo.xacro  sandia_hand.urdf.xacro  sandia_hand_simple_shapes.urdf.xacro
pip/gym_physics/envs/installation/catkin_ws/src/sandia-hand/ros/sandia_hand_driver/: CMakeLists.txt  package.xml
pip/gym_physics/envs/installation/catkin_ws/src/sandia-hand/ros/sandia_hand_driver/cli/: firmware_updater.cpp  loose_finger_cli.cpp  loose_palm_cli.cpp  sandia_hand_cli.cpp
pip/gym_physics/envs/installation/catkin_ws/src/sandia-hand/ros/sandia_hand_driver/common/: distal_phalange.cpp  finger.cpp  hand.cpp  lightweightserial.cpp  loose_finger.cpp  loose_palm.cpp  motor_module.cpp  palm.cpp  param.cpp  proximal_phalange.cpp  serial_message_processor.cpp
pip/gym_physics/envs/installation/catkin_ws/src/sandia-hand/ros/sandia_hand_driver/include/sandia_hand_driver/: distal_phalange.h  finger.h  hand.h  loose_finger.h  loose_palm.h  motor_module.h  palm.h  proximal_phalange.h  serial_message_processor.h
pip/gym_physics/envs/installation/catkin_ws/src/sandia-hand/ros/sandia_hand_driver/nodes/: sandia_hand_loose_finger_node.cpp  sandia_hand_loose_palm_node.cpp  sandia_hand_node.cpp
pip/gym_physics/envs/installation/catkin_ws/src/sandia-hand/ros/sandia_hand_driver/scripts/: palm_update.sh
pip/gym_physics/envs/installation/catkin_ws/src/sandia-hand/ros/sandia_hand_msgs/: CMakeLists.txt  package.xml
pip/gym_physics/envs/installation/catkin_ws/src/sandia-hand/ros/sandia_hand_msgs/srv/: SimpleGraspWithSlew.srv
pip/gym_physics/envs/installation/catkin_ws/src/sandia-hand/ros/sandia_hand_teleop/: CMakeLists.txt  package.xml  setup.py
pip/gym_physics/envs/installation/catkin_ws/src/sandia-hand/ros/sandia_hand_teleop/simple_grasp/: asl_gui.py  simple_grasp.py  simple_grasp_asl.py  simple_grasp_nanokontrol2.py
(+7157 files in other folders)
