<?xml version="1.0"?>
<package>
  <name>sandia_hand_driver</name>
  <version>5.1.15</version>
  <description>The sandia_hand_driver package</description>
  <maintainer email="morgan@osrfoundation.org">Morgan Quigley</maintainer>
  <license>Apache 2.0</license>
  <url type="website">https://bitbucket.org/osrf/sandia-hand</url>
  <author email="scpeters@osrfoundation.org">Steven Peters</author>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>camera_info_manager</build_depend>
  <build_depend>osrf_msgs</build_depend>
  <build_depend>sandia_hand_msgs</build_depend>
  <build_depend>std_srvs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>camera_info_manager</run_depend>
  <run_depend>osrf_msgs</run_depend>
  <run_depend>sandia_hand_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
</package>
