<?xml version="1.0"?>
<package>
  <name>sandia_hand_msgs</name>
  <version>5.1.15</version>
  <description>The sandia_hand_msgs package</description>
  <maintainer email="morgan@osrfoundation.org">Morgan Quigley</maintainer>
  <license>Apache 2.0</license>
  <url type="website">https://bitbucket.org/osrf/sandia-hand</url>
  <author email="scpeters@osrfoundation.org">Steven Peters</author>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_runtime</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
