<?xml version="1.0"?>
<package>
  <name>sandia_hand_teleop</name>
  <version>5.1.15</version>
  <description>
    This package contains some teleop nodes to make it easier to teleoperate the Sandia Hand using standard joysticks or USB slider widgets.
  </description>
  <maintainer email="morgan@osrfoundation.org">Morgan Quigley</maintainer>
  <license>Apache 2.0</license>
  <url type="website">https://bitbucket.org/osrf/sandia-hand</url>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>sandia_hand_msgs</build_depend>
  <build_depend>osrf_msgs</build_depend>
  <run_depend>sandia_hand_msgs</run_depend>
  <run_depend>osrf_msgs</run_depend>
</package>
